# cyberbrain

./: .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  build.sh  cyberbrain.example.json  cyberbrain.local.example.json  install.sh  knowledge.example.json  pyproject.toml  uninstall.sh
.claude-plugin/: mcp.json  plugin.json
.hamlet/: config.json
.ideate/: index.db  index.db-shm  index.db-wal  metrics.jsonl
.ideate/constraints/: C-01.yaml  C-02.yaml  C-03.yaml  C-04.yaml  C-05.yaml  C-06.yaml  C-07.yaml  C-08.yaml  C-09.yaml  C-10.yaml  C-11.yaml  C-12.yaml  C-13.yaml  C-14.yaml  C-15.yaml  C-16.yaml  C-17.yaml
.ideate/decisions/: D-01.yaml  D-02.yaml  D-03.yaml  D-04.yaml  D-05.yaml  D-06.yaml  D-07.yaml  D-08.yaml  D-09.yaml  D-10.yaml  D-11.yaml  D-12.yaml  D-13.yaml  D-14.yaml  D-15.yaml  D-16.yaml
.ideate/interviews/: interview-refine-1.yaml  interview-refine-2.yaml  interview-refine-3.yaml  interview-refine-4.yaml  legacy.yaml
.ideate/metrics/: ME-084E71BF.yaml  ME-29807A8D.yaml  ME-32A01459.yaml  ME-34952AE3.yaml  ME-364C2FF2.yaml  ME-42BABB6E.yaml  ME-570E3397.yaml  ME-5B6954E0.yaml  ME-60E875DE.yaml  ME-65FAACA7.yaml  ME-6608823B.yaml  ME-71677B65.yaml  ME-75E9E8B0.yaml  ME-78B18E2A.yaml  ME-7B2372ED.yaml  ME-80981EEF.yaml  ME-88418A9E.yaml  ME-94E3FB37.yaml  ME-9D3AA96F.yaml  ME-BE96887A.yaml  ME-C0915461.yaml  ME-C8317722.yaml  ME-F1657D1F.yaml  ME-FE3C081B.yaml
.ideate/phases/: PH-001.yaml
.ideate/plan/: architecture.yaml  execution-strategy.yaml  overview.yaml
.ideate/policies/: P-01.yaml  P-02.yaml  P-03.yaml  P-04.yaml  P-05.yaml  P-06.yaml  P-07.yaml  P-08.yaml  P-09.yaml
.ideate/principles/: GP-01.yaml  GP-02.yaml  GP-03.yaml  GP-04.yaml  GP-05.yaml  GP-06.yaml  GP-07.yaml  GP-08.yaml  GP-09.yaml  GP-10.yaml  GP-11.yaml  GP-12.yaml  GP-13.yaml
.ideate/questions/: Q-01.yaml  Q-02.yaml  Q-03.yaml  Q-04.yaml  Q-05.yaml  Q-06.yaml  Q-07.yaml  Q-08.yaml  Q-09.yaml  Q-10.yaml  Q-11.yaml  Q-12.yaml
.ideate/research/: RF-auto-indexing-strategy.yaml  RF-automatic-invocation-validation.yaml  RF-fastmcp-v3-patterns.yaml  RF-filing-accuracy-clustering.yaml  RF-invocation-test-results.yaml  RF-knowledge-graph-ml-approaches.yaml  RF-manual-capture-retest.yaml  RF-plugin-distribution-patterns.yaml  RF-plugin-system-capabilities.yaml  RF-python-architecture-patterns.yaml  RF-python-quality-tooling.yaml  RF-relation-vocabulary.yaml  RF-yaml-search-libraries.yaml
.ideate/steering/: constraints.yaml  guiding-principles.yaml
.ideate/work-items/: WI-001.yaml  WI-002.yaml  WI-003.yaml  WI-004.yaml  WI-005.yaml  WI-006.yaml  WI-007.yaml  WI-008.yaml  WI-009.yaml  WI-010.yaml  WI-011.yaml  WI-012.yaml  WI-013.yaml  WI-014.yaml  WI-092.yaml  WI-093.yaml  WI-094.yaml  WI-095.yaml  WI-096.yaml  WI-097.yaml  WI-098.yaml
.specs/: GOALS.md  PHASE2_SPEC.md  PHASE3_SPEC.md  REVIEW-REPORT.md  deferred.md  enhanced-retrieval.md  knowledge-graph-enhancement.md  mcp-architecture.md  mcp_gaps.md  phase2-spikes.md  review-goals-analysis.md  review-implementation-map.md  v1_spec.md
extractors/: analyze_vault.py  autofile.py  backends.py  evaluate.py  extract_beats.py  extractor.py  frontmatter.py  quality_gate.py  requirements.txt  search_backends.py  search_index.py  vault.py
hooks/: hooks.json  pre-compact-extract.sh  session-end-extract.sh  session-end-reindex.sh
mcp/: resources.py  server.py  shared.py  shared.py,cover  start.sh
mcp/tools/: enrich.py  enrich.py,cover  extract.py  file.py  manage.py  manage.py,cover  recall.py  reindex.py  restructure.py  review.py  setup.py  setup.py,cover
prompts/: autofile-system.md  autofile-user.md  claude-desktop-project.md  enrich-system.md  enrich-user.md  extract-beats-system.md  extract-beats-user.md  restructure-audit-system.md  restructure-decide-system.md  restructure-generate-system.md  restructure-generate-user.md  restructure-group-user.md  restructure-system.md  restructure-user.md  synthesize-system.md
scripts/: import-desktop-export.py  import.py  repair_frontmatter.py  repair_vault_schema.py  test-smoke.sh  test-vault.sh  test.py
skills/cb-enrich/: SKILL.md
skills/cb-extract/: SKILL.md
skills/cb-file/: SKILL.md
skills/cb-recall/: SKILL.md
skills/cb-setup/: SKILL.md
skills/cb-status/: SKILL.md
skills/config/: SKILL.md
skills/kg-claude-md/: SKILL.md
skills/kg-enrich/: SKILL.md
skills/kg-extract/: SKILL.md
skills/kg-file/: SKILL.md
skills/kg-recall/: SKILL.md
skills/kg-setup/: SKILL.md
specs/: brrr-state.md  journal.md  migration-log.md
specs/domains/: index.md
specs/legacy/: GOALS.md  mcp-enhancements.md  v1_spec.md
specs/plan/: architecture.md  execution-strategy.md  intake-interface-design.md  overview.md  retrieval-interface-design.md  work-items.yaml
specs/steering/: constraints.md  guiding-principles.md  interview.md  legacy.md
steering/: GOALS.md  OVERVIEW.md  SPIKES.md  USE_CASES.md  knowledge-graph-memory-system.md  knowledge-graph-system.md
steering/spike-outputs/: SP10-chatgpt-import.md  SP11-security-audit.md  SP12-retrieval-architecture.md  SP13-auto-enrichment.md  SP14-cost-profiling.md  SP2-daily-journal-debug.md  SP3-system-audit.md  SP5-data-sources.md  SP6-classification-quality.md  SP7-session-end-capture.md  SP8-deduplication.md  (+1 more)
tests/: __init__.py  _dependency_map.py  conftest.py  test_analyze_vault.py  test_audit.py  test_auto_indexing.py  test_autofile.py  test_backends.py  test_config_guard.py  test_dependency_map.py  test_enrich.py  test_evaluate.py  test_extract_beats.py  test_extract_file_tools.py  test_extractor_helpers.py  test_fastmcp_contract.py  test_import.py  test_manage_tool.py  test_mcp_server.py  test_quality_gate.py  test_recall_read_tools.py  test_recall_read_tools.py.bak  test_reindex_tool.py  test_repair_frontmatter.py  test_repair_vault_schema.py  test_restructure_tool.py  test_restructure_tool.py.bak  test_review_tool.py  test_review_tool.py.bak  test_search_backends.py  test_search_index.py  test_setup_enrich_tools.py  test_vault.py
tests/vaults/: README.md
(+863 files in other folders)
