[project]
name = "cyberbrain-mcp"
version = "1.0.1"
description = "Knowledge capture and retrieval for Claude sessions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dan Singer"}
]
keywords = ["claude", "mcp", "knowledge-management", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=3.0.0",
    "mcp",
    "pyyaml>=6.0",
    "ruamel.yaml",
]

[project.optional-dependencies]
bedrock = ["anthropic>=0.40.0"]
semantic = ["fastembed>=0.3", "usearch==2.23.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
cyberbrain-mcp = "cyberbrain.mcp.server:main"
cyberbrain-extract = "cyberbrain.extractors.extract_beats:main"
cyberbrain-reindex = "cyberbrain.extractors.search_index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberbrain"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "--tb=no -q --no-header"
markers = [
    "core: Essential tests - always run in targeted mode",
    "extended: Integration tests - run on full regression only",
    "slow: Performance tests - run manually only",
]